--- a/temp_docs/_layouts/pretty.html
+++ b/temp_docs/_layouts/pretty.html
@@ -48,7 +48,11 @@
       </section>
       {% include footer.html %}
     </div>
+
+    <!-- Mobile scaling fix -->
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+
+    <!-- Google Analytics shtuff -->
     {% if site.google_analytics %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
