--- a/docs/_layouts/directory.html
+++ b/docs/_layouts/directory.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="{{ site.lang | default: en-US }}"><head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Begin Jekyll SEO tag v2.5.0 -->
-<title>Melee | SmashRanks</title>
+<title>Games | SmashRanks</title>
 <meta name="generator" content="Jekyll v3.8.5" />
 <meta property="og:title" content="Your awesome title" />
 <meta property="og:locale" content="en_US" />
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Your awesome title" /></head>
 <body><header class="site-header" role="banner">
 
-  <div class="wrapper"><a class="site-title" rel="author" href="/">Super Smash Bros for Wii U and Nintendo 3DS with Knuckles Featuring Dante from the DMC: Devil May Cry Series</a><nav class="site-nav">
+  <div class="wrapper"><a class="site-title" rel="author" href="/">{{ page.title }}</a><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -27,39 +27,12 @@
             </svg>
           </span>
         </label>
+        {% include navigation.html %}
 
-        <div class="trigger"><a class="page-link" href="/about/">About</a></div>
       </nav></div>
 </header>
-<main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        <div class="home">
-          <img src="/assets/images/ssb4.jpg" alt="A baby game for babies">
-      </div>
-    </main><footer class="site-footer h-card">
-  <data class="u-url" href="/"></data>
-
-  <div class="wrapper">
-
-    <h2 class="footer-heading">Contact me!</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li class="p-name">Report issues to: </li><li><a class="u-email" href="mailto:jobboman@gmail.com">jobboman@gmail.com</a></li></ul>
-      </div>
-
-      <div class="footer-col footer-col-2"><ul class="social-media-list"><li><a href="https://github.com/LoaneShark"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg> <span class="username">LoaneShark</span></a></li><li><a href="https://www.twitter.com/TheLoaneRanger"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg> <span class="username">TheLoaneRanger</span></a></li></ul>
-</div>
-
-      <div class="footer-col footer-col-3">
-        <p>SmashRanks.com is in no way affiliated with Nintendo, smash.gg, or other regulatory bodies. Super Smash Bros. is a registered trademark of Nintendo of America Inc.</p>
-      </div>
-    </div>
-
-  </div>
-
-</footer>
+{{ content }}
+{% include footer.html %}
 </body>
 
 </html>
