--- a/docs/_includes/dbtable.html
+++ b/docs/_includes/dbtable.html
@@ -1,18 +1,17 @@
 <!-- Bootstrap, DataTables CSS -->
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.13/css/dataTables.bootstrap.min.css"> 
+{% include bootstrap_css.html %}
 <!--<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.1.1/css/responsive.bootstrap.min.css">-->
 <div>
 	<!-- nav tabs -->
 	<ul class="nav nav-tabs nav-justified center-block" role="tablist">
-		<li role="presentation" class="active"><a class="nav-link active" id="current-tab" href="#current" aria-controls="current" role="tab" data-toggle="tab">Current</a></li>
+		<li role="presentation" class="active"><a id="current-tab" class="nav-link active" href="#current" aria-controls="current" role="tab" data-toggle="tab">Current</a></li>
 		<li role="presentation"><a id="past-tab" class="nav-link" href="#past" aria-controls="past" role="tab" data-toggle="tab"></a></li>
 		<li role="presentation"><a id="alltime-tab" class="nav-link" href="#alltime" aria-controls="alltime" role="tab" data-toggle="tab">All-Time</a></li>
 	</ul>
 
 	<!-- tab contents -->
 	<div class="tab-content">
-		<div role="tabpanel" class="tab-pane fade in active" id="current">
+		<div role="tabpanel" class="tab-pane fade in active" id="current-panel">
 			<table id="current-table" class="table table-striped table-bordered hover" cellspacing="0" width="100%">
 				<!-- table header -->
 				<colgroup>
@@ -59,7 +58,7 @@
 				</tbody>
 			</table> <!-- current year -->
 		</div> <!-- current year tab -->
-		<div role="tabpanel" class="tab-pane fade" id="past">
+		<div role="tabpanel" class="tab-pane fade" id="past-panel">
 			<table id="past-table" class="table table-striped table-bordered hover" cellspacing="0" width="100%">
 				<!-- table header -->
 				<colgroup>
@@ -106,7 +105,7 @@
 				</tbody>
 			</table> <!-- past year -->
 		</div> <!-- past year tab -->
-		<div role="tabpanel" class="tab-pane fade" id="alltime">
+		<div role="tabpanel" class="tab-pane fade" id="alltime-panel">
 			<table id="alltime-table" class="table table-striped table-bordered hover" cellspacing="0" width="100%">
 				<!-- table header -->
 				<colgroup>
@@ -157,40 +156,22 @@
 </div> <!-- tables -->
 
 <!-- DB import/connection -->
-<script src="https://www.gstatic.com/firebasejs/5.8.4/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.8.4/firebase-database.js"></script>
+{% include firebase_scripts.html %}
+
 <!-- jQuery, Bootstrap, DataTables imports -->
-<!--<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap.min.js"></script>-->
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
-<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.13/js/dataTables.bootstrap.min.js"></script>
+{% include bootstrap_scripts.html %}
+{% include datatables_scripts.html %}
 
-<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/responsive/2.1.1/js/dataTables.responsive.min.js"></script>
-<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/responsive/2.1.1/js/responsive.bootstrap.min.js"></script>
-
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyAfoIXJXWGlxuMvOOJCBDYa-Jbw8FaiblY",
-    authDomain: "smashranks-db.firebaseapp.com",
-    databaseURL: "https://smashranks-db.firebaseio.com",
-    projectId: "smashranks-db",
-    storageBucket: "smashranks-db.appspot.com",
-    messagingSenderId: "1057783802681"
-  };
-  firebase.initializeApp(config);
-</script>
 <!-- populating page's table -->
 <script src="/assets/js/table_utils.js"></script>
+<!-- other functions -->
+<script src="/assets/js/misc_utils.js"></script>
 <script>
 	$().ready(function() {
-		var page_title = "{{page.title}}"
-		var title_ids = {"Melee":1,"PM":2,"Smash4":3,"64":4,"Brawl":5,"Ultimate":1386}
-		var game_id = title_ids[page_title]
+		//var page_title = "{{page.title}}"
+		//var title_ids = {"Melee":1,"PM":2,"Smash4":3,"64":4,"Brawl":5,"Ultimate":1386}
+		//var game_id = title_ids[page_title]
+		var game_id = getGameId("{{page.title}}")
 		// get current year for db lookups
 		var curr_year = new Date().getFullYear();
 		// label the past year's tab
@@ -216,7 +197,7 @@
 				});
 			} else {
 				console.log('whoops! db directory not found: '+ curr_ref_str)
-				//$('#current-tab').addClass("disabled")
+				$('#current-tab').addClass("disabled")
 			};
 		});
 		// populate "past" table
@@ -239,7 +220,7 @@
 				});
 			} else {
 				console.log('whoops! db directory not found: '+ past_ref_str)
-				//$('#past-tab').addClass("disabled")
+				$('#past-tab').addClass("disabled")
 			};
 		});
 		// populate "all-time" table
@@ -262,7 +243,7 @@
 				});
 			} else {
 				console.log('whoops! db directory not found: '+ db_ref_str)
-				//$('#alltime-tab').addClass("disabled")
+				$('#alltime-tab').addClass("disabled")
 			};
 		});
 
