--- a/docs/_includes/bootstrap_css.html
+++ b/docs/_includes/bootstrap_css.html
@@ -1,3 +1,6 @@
-<!-- Bootstrap, DataTables CSS -->
+<!-- Bootstrap 4, jQuery 3, DataTables, Buttons, Responsive CSS 
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4-4.1.1/jq-3.3.1/dt-1.10.18/b-1.5.4/r-2.2.2/datatables.min.css"/>
+-->
+
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css"> 
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
