--- a/docs/_includes/bootstrap_scripts.html
+++ b/docs/_includes/bootstrap_scripts.html
@@ -2,6 +2,12 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+<!-- Popper.js and Tooltip.js imports -->
+<script type="text/javascript" src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
+<script type="text/javascript" src="https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js"></script>
+
+<!-- Bootstrap 4, jQuery 3, DataTables, Buttons, Responsive JS imports  
+<script type="text/javascript" src="https://cdn.datatables.net/v/bs4-4.1.1/jq-3.3.1/dt-1.10.18/b-1.5.4/r-2.2.2/datatables.min.js"></script>-->
 
 <!--
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
