--- a/docs/_includes/player_profile.html
+++ b/docs/_includes/player_profile.html
@@ -15,10 +15,10 @@
 
 
 <div class="d-flex flex-row">
-	<div class="p-2" id="player_team_div">
+	<div class="p-2 justify-content-middle" id="player_team_div">
 		<h1 class="display-5" id="player_team"></h1>
 	</div>
-	<div class="p-2" id="player_tag_div">
+	<div class="p-2 justify-content-middle" id="player_tag_div">
 		<h1 class="display-4" id="player_tag"></h1>
 	</div>
 	<div class="p-2" id="player_aliases_div">
