--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,4 +1,5 @@
-<nav>
+<nav class="navbar navbar-light bg-light">
+	<a class="navbar-brand" href="#">SmashRanks</a>
   {% for item in site.data.navigation %}
     <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>{{ item.name }}</a>
   {% endfor %}
